--- a/src/app/styles/UI.scss
+++ b/src/app/styles/UI.scss
@@ -11,8 +11,11 @@
   margin: 0;
   width: 100%;
   height: 100%;
+  cursor: default;
 }
-
+button, a, .clickable {
+  cursor: pointer;
+}
 #react-page {
   width: 100%;
 }
@@ -20,10 +23,14 @@ body {
   @include body;
 }
 
+h2{
+  margin: 0;
+}
 p {
   margin: 0;
   // font-weight: 500;
   font-family: 'Inter';
+  font-size: 12px;
 }
 .authenticationContainer {
   @include body;
@@ -33,7 +40,6 @@ p {
   display: flex;
   // width: 120px;
   // height: 100%;
-  padding: map-get($spacing, 50) map-get($spacing, 0);
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
@@ -62,7 +68,7 @@ p {
 
 @mixin title {
   display: flex;
-  padding: map-get($spacing, 50) map-get($spacing, 75) map-get($spacing, 100) map-get($spacing, 75);
+  padding: map-get($spacing, 100) map-get($spacing, 75) ;
   justify-content: space-between;
   gap: map-get($spacing, 100);
   align-items: center;
@@ -80,8 +86,12 @@ p {
   align-items: center;
   border-radius: map-get($radius, 2);
   border: none;
-  background: theme-color($light-theme, surfaces, primary);
+  background-color: theme-color($light-theme, surfaces, primary);
+  transition: background-color 0.2s ease-in-out;
 
+  &:hover{
+    background-color: theme-color($light-theme, surfaces, tertiary);
+  }
 }
 .icon_panel_open {
   @include icon_panel_open;
@@ -93,10 +103,19 @@ p {
   align-items: center;
   border-radius: map-get($radius, 2);
   border: 1px solid theme-color($light-theme, utility, border_primary);
-  background: theme-color($light-theme, surfaces, secondary);
+  background-color: theme-color($light-theme, surfaces, secondary);
+  transition: background-color 0.2s ease-in-out;
+
+  &:hover{
+    background-color: theme-color($light-theme, surfaces, tertiary);
+  }
 }
 .icon_panel_close {
   @include icon_panel_close;
+}
+
+.icon_panel_open:hover, .icon_panel_close:hover{
+  cursor:pointer;
 }
 @mixin menu_items {
   display: flex;
@@ -121,17 +140,20 @@ p {
   font-family: 'Inter';
   font-size: 12px;
   font-weight: 500;
-
   line-height: 150%;
+
+  &:hover{
+    cursor: pointer;
+    border-radius: map-get($radius, 4);
+    background-color: theme-color($light-theme, surfaces, secondary);
+  }
 }
 
 .menu_item {
   @include menu_item;
 }
 
-.menu_item:hover {
-  cursor: pointer;
-}
+
 
 @mixin activeNav {
   display: flex;
@@ -145,6 +167,7 @@ p {
   font-weight: 500;
   line-height: 150%;
   color: theme-color($light-theme, text, primary);
+
 }
 
 .activeNav {
@@ -153,7 +176,7 @@ p {
 
 @mixin about_container {
   display: flex;
-  padding: map-get($spacing, 0) map-get($spacing, 75);
+  padding: map-get($spacing, 100);
   align-items: center;
   gap: map-get($spacing, 50);
   align-self: stretch;
@@ -170,6 +193,7 @@ p {
 }
 
 @mixin rightBody {
+  width: 370px;
   display: flex;
   padding: map-get($spacing, 0);
   flex-direction: column;
@@ -182,4 +206,11 @@ p {
 
 .rightBody {
   @include rightBody;
+}
+
+@mixin refreshContainer{
+  cursor: pointer;
+}
+.refreshContainer{
+  @include refreshContainer;
 }
